--- a/HTML/task1.html
+++ b/HTML/task1.html
@@ -19,27 +19,27 @@
     <section>
       <img src="./profilepic.jpeg" alt="profilepic" width="200" height="200">
       <h2>Welcome to my personal website!</h2>
-      <p>My name is Aishvarya,Recent Graduate in the stream of Electronics and Communication engineering with a CGPA:8.78 ,and i'm passionate in creating web pages and web development </p>
+      <p>My name is Aishvarya, Recent Graduate in the stream of Electronics and Communication engineering with a CGPA:8.78, and I'm passionate about creating web pages and web development.</p>
     </section>
     <section>
-        <h2> Education Details</h2>
-        <h3>Bachelor's Degree (B.Tech) in Lendi Institute of Engineering and Technology</h3>
-        <p>Electronics and Communication Engineering, 2020 - 2024</p>
+      <h2>Education Details</h2>
+      <h3>Bachelor's Degree (B.Tech) in Lendi Institute of Engineering and Technology</h3>
+      <p>Electronics and Communication Engineering, 2020 - 2024</p>
     </section>
     <section>
-        <h2> Internship Details</h2>
-    </section>
-    <ul>
+      <h2>Internship Details</h2>
+      <ul>
         <li>Salesforce Administrator Virtual Internship</li>
         <li>AWS Data Analytics Virtual Internship</li>
-    </ul>
+      </ul>
+    </section>
     <section>
       <h2>My Skills</h2>
       <ul>
         <li>HTML</li>
         <li>CSS</li>
-        <li>PYTHON</li>
-        <li>JAVA</li>
+        <li>Python</li>
+        <li>Java</li>
         <li>SQL</li>
       </ul>
     </section>
